config/methodology/0.3.0-dev/METHODOLOGY.md
<!-- AUTO-GENERATED by `python -m tci.run docs` from config/factors.yaml.
     Do not hand-edit; edit the config or tci/methodology.py and regenerate. -->

# TCI Methodology — v0.3.0-dev

TCI (The Compute Indices) is a daily reference price for renting AI compute
delivered from data centres physically located in the EU/EEA. Headline series:
**TCI-CRI-H100**, in USD per GPU-hour with a EUR companion at the ECB reference rate.

> **TCI is a price-transparency benchmark, not a settlement benchmark.** Every print is
> reproducible by any third party from public sources using the published code. It is not
> transaction-based and must not be referenced in a financial contract. The conditions
> that would have to be met before settlement use is credible are published in
> GOVERNANCE.md. §9 lists every methodology version and the date it takes effect.

## 1. Unit definition

One TCI-CRI-H100 unit = one NVIDIA **H100_SXM** 80GB GPU-hour,
**on_demand** (no term commitment), datacenter-hosted, delivered from the
EU/EEA, per-GPU, **ex-VAT**, excluding storage and metered egress.

A class prices its **reference variant only**. Cross-variant normalisation by assumed
factors was removed in v0.3.0: H100 SXM and H100 PCIe are different products, and
H100→H200 normalisers disagree in *sign* depending on whether you divide by BF16 PFLOPs
(+31%) or HBM bandwidth (−9%). A variant may enter a class only under a factor **measured**
from same-venue, same-day, same-SKU pairs.

| Class | Reference variant | Variants (factor) |
|---|---|---|
| `H100` | H100_SXM | H100_SXM (x1) |
| `H200` | H200_SXM | H200_SXM (x1) |
| `B200` | B200_SXM | B200_SXM (x1) |
| `B300` | B300_SXM | B300_SXM (x1) |
| `A100` | A100_SXM | A100_SXM (x1) |
| `H100P` | H100_PCIE | H100_PCIE (x1) |

### 1.1 The panel

A row can enter a print only if its provider, the collector that observed it, and its
class are all named here. Anything else is collected and stored, and appears in the audit
set as `not_in_panel`, but moves no number. Admitting a new (provider, collector, class)
is a constituent change under GOVERNANCE.md §1.

| Provider | Segment | Collector: classes admitted |
|---|---|---|
| aws | hyperscaler | `gpuhunt`: H100 |
| azure | hyperscaler | `azure_retail`: A100, H100, H100P, H200; `gpuhunt`: H100 |
| datacrunch | neocloud | `static_yaml`: H100 |
| gcp | hyperscaler | `gpuhunt`: H100 |
| genesis_cloud | neocloud | `static_yaml`: H100 |
| hetzner | neocloud | `static_yaml`: H100 |
| leaseweb | neocloud | `static_yaml`: H100 |
| nebius | neocloud | `static_yaml`: H100 |
| ovhcloud | neocloud | `static_yaml`: H100 |
| runpod | marketplace | `runpod`: A100, H100 |
| scaleway | neocloud | `scaleway`: B300, H100, H100P |
| seeweb | neocloud | `static_yaml`: H100 |
| vast.ai | marketplace | `vast_ai`: A100, H100 |

Excluded outright: variants not listed above, community/consumer hosts,
interruptible/spot tiers (interruptible, spot, community), term-committed prices,
offers below **2 GPUs**, prices outside the sanity band
[$0.25, $25.00] per GPU-hour.

**Why the node floor is 2, not 8.** Measured within one venue on
one day, the per-GPU discount saturates at 2 GPUs (1×=1.000, 2×=0.951, 4×=0.916,
8×=0.916), so 2/4/8-GPU offers are mutually comparable within ~4% and need no adjustment,
while the 1-GPU offer carries a ~9% small-order premium and is excluded rather than
normalised away. The former 8-GPU floor admitted marketplace inventory on 1 collection day
in 10 and discarded essentially all of the index's price discovery.

## 2. Data hierarchy and market segments (IOSCO P8)

Executable marketplace asks are preferred over list prices and carry a
**2×** weight multiplier. Overlay data (power prices)
never enters the calculation. Competitor indices are never ingested.

The constituent distribution is **bimodal** — measured separation of 5.4 standard
deviations between the neocloud/marketplace cluster and the hyperscaler catalog cluster.
Averaging across that gap yields a number no one quotes, so series are segregated by
market segment and never drawn across it:

| Series | Population |
|---|---|
| `EU-CRI-H100` (headline) | marketplace, neocloud |
| `EU-CRI-H100-MKT` | marketplace |
| `EU-CRI-H100-HS` | hyperscaler |
| `EU-CRI-H100-SOV` | marketplace, neocloud (further filtered by config/sovereign.yaml) |

## 3. Aggregation (exact algorithm)

Per UTC day and series. **The unit of aggregation is the offer, not the provider.**

1. Collect all observations for the day passing the unit filters above, restricted to the
   series' market-segment population.
2. Static (manually verified) entries older than 90 days are
   excluded as stale (warning from 45 days).
3. **Provider weight** = 2 if the provider has any
   executable offer, else 1. Capacity does *not* enter here: it is unobservable for every
   list source, so a capacity term at provider level is fiction that made a rate card
   disclosing nothing outrank a marketplace disclosing a real 2-GPU offer.
4. **Concentration cap**: no provider may exceed 25% of
   total weight; excess is redistributed pro-rata, iterated to a fixed point (the cap
   relaxes to 100/n when n providers cannot satisfy it). Note this cap is mathematically
   inert at n=4 — it forces exactly equal shares — and binds only for n≥5. Every print
   publishes whether it bound.
5. **Spread each provider's share across its own offers** in proportion to offer capacity.
   Capacity is genuinely observable *here*, between offers from the same venue.
6. **Trim**: clamp the k highest and k lowest offer prices to the k-th order statistic
   from each end, k by panel size (n≥5 → k=1; n≥10 → k=2; n≥20 → k=3). Count-based, because nearest-rank
   percentile winsorising is inert at this panel size — at n=6 both p5/p95 and p10/p90
   resolve to (min, max) and clamp nothing.
7. **Weighted median over offers**: sort by price ascending; the value is the first price
   at which cumulative weight reaches 50%. A median over ~6 providers has a delta of 1.0
   to one constituent and 0.0 to every other; a median over many capacity-weighted offers
   is locally smooth and always lands on a price someone actually quoted.
8. **Publish gate**: fewer than 5 qualifying providers or
   fewer than 5 qualifying offers → no value is published,
   flagged `insufficient_sources` / `insufficient_offers`. There is no fallback waterfall.
   A gap is credible; a fabricated print is fatal.
9. EUR companion = USD value ÷ the most recent ECB EUR/USD reference rate dated **on or before** the print date. The ECB publishes ~14:00 UTC, after the 11:00 UTC cut-off, so the EUR leg is T-1 on most days; a run after the ECB publication picks up the same-day rate. The rate a print used is recorded with it and is what `reproduce` converts at.
   Providers quoting natively in EUR are converted from their native amount at print time,
   at the same rate.
10. Headline companion: 7-day mean of daily prints
    (requires ≥4 non-null days).

Constituent prices moving more than 30% day-over-day are flagged
(`jump`) for manual review but are **not** excluded. A print with no executable input is
flagged `no_executable_input` — a list-price-only print says so on its face.

### 3.1 Continuity series

The headline is the **raw daily cross-section**, not a chain-linked level. A Laspeyres
link with a same-day divisor reset contributes exactly zero return on panel entry and
exit, which makes in-panel up-moves permanent while down-moves taken via exit and re-entry
are laundered out — a ratchet worth roughly +7.8% per cycle for a constituent at the
25% cap. A chained level is published *beside* the
headline as a labelled companion, and the divergence between them is a published health
metric with a 5% review trigger.

### 3.2 TCI-CRI-COMPUTE (chain-linked class composite)

The composite aggregates the class series into one level (base
100 at its first print), **chain-linked** so that reweighting
never jumps the published level:

- At each weight review, **class basket shares** = each class's share of total observed
  qualifying capacity over the window. With ≥2 eligible classes, shares are capped at
  75% and floored at 5%
  (pro-rata redistribution, as in §3 step 6).
- Daily: composite(t) = composite(t−1) × Σ share × (class(t) / class(t−1)), summed over
  classes with a published value on both endpoints, shares renormalised over those
  classes. A class that gaps drops out of that day's link; if no class links, the
  composite gaps (`no_linkable_series`).
- As the observed market migrates across hardware generations (H100 → B200), the basket
  follows mechanically — no methodology change required.

## 4. Series

| Series | Constituents |
|---|---|
| `EU-CRI-H100` | all qualifying H100-class providers (headline) |
| `EU-CRI-H100-7D` | 7-day mean of the headline |
| `EU-CRI-H100-SOV` | EU/EEA-headquartered operators: datacrunch, genesis_cloud, hetzner, leaseweb, nebius, ovhcloud, scaleway, seeweb |
| `EU-CRI-H100-MKT` | marketplace segment only |
| `EU-CRI-H100-NC` | neocloud segment only |
| `EU-CRI-H100-HS` | hyperscaler catalog segment only |
| `EU-CRI-H100-PCIE` | H100 PCIe, priced as its own class (no assumed SXM factor) |
| class series (`EU-CRI-A100`, `EU-CRI-H200`, `EU-CRI-B300`, …) | one per observed class in §1; published once ≥5 providers exist (gapped, with audit trail, before that) |
| `EU-CRI-COMPUTE` | chain-linked composite of class series (§3.2); a level, not a $/hr price |


`EU-CRI-H100-CLOUD` was **retired in v0.3.0** and is not published. Its historical
values remain in `index_history.csv` under the methodology version that produced them.

**Segment size and the publication gate.** A sub-population series can only print when
its segment holds at least `min_providers` (5) qualifying
providers. `EU-CRI-H100-MKT` and `EU-CRI-H100-HS` draw on segments smaller than that and
therefore gap by construction rather than by circumstance. This is stated here because a
permanent gap and a temporary one look identical on the dashboard, and the difference
matters to a reader.

## 5. Revisions and corrections

Raw observations and published prints are append-only (enforced by database triggers).
Errors are corrected in the next print as a **new revision** flagged `correction`; prior
revisions remain queryable forever. The full constituent set for any print is available
via `python -m tci.run constituents --date YYYY-MM-DD`, and every print is published with
its constituents and a digest in `site/data/prints/YYYY-MM-DD.json`.

`python -m tci.run reproduce --published` recomputes every stored print from the stored
observations under the version live on its date, compares value, counts, flags and the
full constituent set with what was stored, then checks each published digest against the
database. Exit 0 means every print matched.

## 6. Changes to this methodology

Any change to the parameters below or the calculation code requires a version bump, a
CHANGELOG entry, and one publication's notice before taking effect, enforced
mechanically via `METHODOLOGY.lock` in CI. See GOVERNANCE.md.

Effective dates are enforced in code. An announced version is committed on the day of its
notice and is selected for a print only from its effective date (§9); earlier versions are
frozen snapshots under `config/methodology/<version>/`, each with its own rendered copy of
this document, and the lock refuses any change to a frozen snapshot.

## 7. Current parameters (config/factors.yaml, verbatim)

```yaml
# EU-CRI methodology parameters. Every number that affects a published print lives here.
# Changing anything in this file (or sovereign.yaml, index.py, normalise.py, weights.py)
# requires a methodology_version bump + CHANGELOG entry - enforced by CI (see GOVERNANCE.md).
methodology_version: "0.3.0-dev"   # '-dev' relaxes the lock guard pre-launch; drop it at launch

reference_unit:
  gpu_model: H100_SXM        # headline reference variant (class H100 below)
  term: on_demand            # no term commitment
  location: EU_EEA           # datacenter physically in the EU/EEA
  # v0.3.0 removed `node_gpus: 8`. The node-size floor now lives in filters.min_gpu_count
  # and is 2, not 8 - see the measurement recorded there.
  # Per-GPU-hour, ex-VAT, excluding metered egress. USD primary, EUR companion at the
  # ECB reference rate (T-1: the ECB publishes ~14:00 UTC, after our 11:00 cut-off, so
  # the EUR leg structurally cannot use same-day FX - see METHODOLOGY.md).

# Compute classes the index observes. A class prices its reference variant ONLY.
# v0.3.0: cross-variant normalisation factors are removed. H100 SXM and H100 PCIe are
# different products, and H100->H200 normalisers disagree in SIGN depending on whether
# you divide by BF16 PFLOPs (+31%) or HBM bandwidth (-9%). A variant may re-enter a class
# only with a factor MEASURED from same-venue, same-day, same-SKU pairs (see
# `measured_factors` below). No assumed factors are permitted in the calculation path.
model_classes:
  H100:   {reference_variant: H100_SXM,  variants: {H100_SXM: 1.0}}
  H200:   {reference_variant: H200_SXM,  variants: {H200_SXM: 1.0}}
  B200:   {reference_variant: B200_SXM,  variants: {B200_SXM: 1.0}}
  B300:   {reference_variant: B300_SXM,  variants: {B300_SXM: 1.0}}
  A100:   {reference_variant: A100_SXM,  variants: {A100_SXM: 1.0}}
  H100P:  {reference_variant: H100_PCIE, variants: {H100_PCIE: 1.0}}   # PCIe priced separately

# Market segment per provider. This is the tier-segregation control and it is
# methodology-affecting: the constituent population is bimodal (measured 2026-08-15,
# cluster separation 5.4 sd between the neocloud/marketplace cluster [2.16..3.85] and the
# hyperscaler cluster [5.44..7.36]). Averaging across that gap produces a number nobody
# quotes. Providers not listed default to 'neocloud'.
segments:
  marketplace: [vast.ai, runpod]
  hyperscaler: [aws, gcp, azure]
  neocloud:    [nebius, datacrunch, seeweb, scaleway, ovhcloud, hetzner, genesis_cloud,
                leaseweb]

# Which segments each published series draws from. The headline deliberately excludes the
# hyperscaler catalog tier - those are the two highest and least-moving prices in the panel
# and they belong in the series where they are the correct object of measurement.
series_populations:
  headline:    [marketplace, neocloud]
  marketplace: [marketplace]
  hyperscaler: [hyperscaler]
  sovereign:   [marketplace, neocloud]   # further filtered by config/sovereign.yaml

filters:
  min_gpu_count: 2           # v0.3.0: was 8. Measured within-venue same-day (vast.ai
                             # 2026-07-18) the per-GPU discount SATURATES at 2 GPUs:
                             # 1x=1.000, 2x=0.951, 4x=0.916, 8x=0.916. So 2/4/8-GPU offers
                             # are mutually comparable within ~4% and need no factor, while
                             # the 1-GPU offer carries a ~9% small-order premium and is
                             # excluded rather than normalised. The old 8-GPU floor passed
                             # 1 of 10 vast.ai days and threw away ALL marketplace price
                             # discovery (9 distinct EU H100 prices, +12.3% range).
  price_floor_usd: 0.25      # junk-listing guard: asks below this are excluded
  price_ceiling_usd: 25.0    # sanity ceiling
  datacenter_verified_only: true
  exclude_tiers: [interruptible, spot, community]

aggregation:
  unit: offer                # v0.3.0: aggregate over OFFERS, not one price per provider.
                             # A median over ~6 providers is a step function with delta 1.0
                             # to one name and 0.0 to the rest. A median over many
                             # GPU-count-weighted offers is the SOFR construction and is
                             # locally smooth. Density is what makes the median sound.
  estimator: weighted_median # over offers, weighted by GPU count (capacity)
  trim_k:                    # count-based trim: clamp the k highest and k lowest.
    - {min_n: 0,  k: 0}      # Percentile winsorising is INERT at this panel size: at n=6
    - {min_n: 5,  k: 1}      # nearest-rank p5/p95 AND p10/p90 both resolve to (min, max)
    - {min_n: 10, k: 2}      # and clamp nothing. The shipped [5,95] was a no-op for the
    - {min_n: 20, k: 3}      # entire history of the index. Count-based trimming binds at
                             # every n.
  min_providers: 5           # below this: value=null, flag='insufficient_sources'.
                             # A gap stays a gap - no fallback waterfall, no fabrication.
  min_offers: 5              # and at least this many surviving offers
  smoothing_days: 7          # headline companion series: 7-day mean (>=4 non-null required)

weights:
  capacity_cap: 64           # daily capacity term = min(observed qualifying GPUs, cap)
  default_capacity: 8        # ... where capacity is unobservable (all list-price rows)
  executable_multiplier: 2.0 # executable-quote sources weighted double list-price sources
  max_weight_share_pct: 25   # per-PROVIDER aggregate cap, applied after offers are summed
                             # within a provider. NOTE: this cap is mathematically inert at
                             # n=4 (max(25, 100/n) forces exactly equal shares - verified
                             # 0.0 deviation over 50k random weight vectors). It binds again
                             # only once the panel is wider; `cap_bound` is published per
                             # print so a reader can see whether it did anything.
  review:                    # scheduled, data-driven weight reviews (fixed rule, no discretion)
    anchor_weekday: 1        # ISO weekday a review takes effect (1 = Monday, i.e. weekly)
    window_days: 28          # trailing observation window ending the day before the review
    min_history_days: 5      # fewer collection days than this in the window -> bootstrap

composite:                   # EU-CRI-COMPUTE: chain-linked basket of class sub-indices
  base_value: 100.0          # level on the composite's first print
  min_class_share_pct: 5     # floor for an eligible class at review (applies with >=2 classes)
  max_class_share_pct: 75    # cap for a class at review (applies with >=2 classes)

# Continuity series. v0.3.0 DEMOTES chain-linking from the headline to a labelled companion.
# A Laspeyres link with a same-day divisor reset contributes exactly zero return on panel
# entry/exit, which makes in-panel up-moves permanent while down-moves taken via exit and
# re-entry are laundered out - a ratchet worth ~+7.8% per cycle for a 25% constituent.
# The headline is therefore the raw cross-section (reproducible, no drift, no ratchet); the
# chained level is published beside it and the divergence between them is a health metric.
continuity:
  publish_chained: true
  base_value: 100.0
  divergence_review_pct: 5   # chained vs raw divergence above this triggers a documented review

fx:
  max_age_days: 7            # refuse an FX rate older than this (flag the print instead)
  # HARD RULE enforced in code: fx_date <= print date. Two 2026-07 prints were computed
  # with an FX rate published on 2026-07-21, i.e. AFTER the print date - a look-ahead
  # introduced by backfill. Covered by a regression test.

staleness:                   # static (manually verified) provider entries
  warn_days: 45              # loader warns
  exclude_days: 90           # excluded from the index with exclusion_reason='stale'

quality:
  jump_flag_pct: 30          # day-over-day provider move that flags (never excludes)

# Factors measured from same-venue, same-day, same-SKU observations. Published for
# transparency; NONE of these currently enter the calculation path. A factor may only be
# promoted into `model_classes` after it is supported by >=3 independent venue-days.
measured_factors:
  node_size_per_gpu:         # vast.ai, EU H100_SXM, same-day ratios vs the 1-GPU offer
    "2": 0.9514              # n=3 venue-days
    "4": 0.9159              # n=1  - provisional
    "8": 0.9158              # n=1  - provisional
  fabric_infiniband_premium: 1.107   # Azure westeurope ND96isr vs ND96is_noIB, n=1 pair.
                                     # PROVISIONAL - measures Azure's internal price ladder,
                                     # not the market's. Not in the calculation path.

eu_eea_countries: [AT, BE, BG, HR, CY, CZ, DK, EE, FI, FR, DE, GR, HU, IE, IT,
                   LV, LT, LU, MT, NL, PL, PT, RO, SK, SI, ES, SE, IS, LI, NO]
# NOTE: CH (Switzerland) is deliberately absent - Switzerland is in EFTA but NOT the EEA.

# --------------------------------------------------------------------------------------
# EXPLICIT PANEL — added 2026-09-11, when this file was frozen as the 0.3.0-dev snapshot.
#
# 0.3.0-dev never had an enumerated panel. Its constituent population was "whatever the
# collectors produced", with unlisted providers defaulting to the neocloud segment. That
# was harmless only while the collector set stayed fixed; once new collectors start
# storing rows, the same rule would admit them to prints computed under this version.
#
# The block below is that implicit population made explicit: every (provider, collector,
# class) triple that had produced a qualifying row by 2026-09-11, plus the static entries
# listed under `segments` above. It is a re-expression, not a change. Every print stored
# under 0.3.0-dev recomputes to the same value, provider count and constituent set with it
# in place (`python -m tci.run reproduce`, and tests/test_reproduce.py in CI).
panel:
  vast.ai:       {segment: marketplace, sources: {vast_ai: [H100, A100]}}
  runpod:        {segment: marketplace, sources: {runpod: [H100, A100]}}
  aws:           {segment: hyperscaler, sources: {gpuhunt: [H100]}}
  gcp:           {segment: hyperscaler, sources: {gpuhunt: [H100]}}
  azure:         {segment: hyperscaler, sources: {azure_retail: [H100, H100P, A100, H200],
                                                  gpuhunt: [H100]}}
  scaleway:      {segment: neocloud, sources: {scaleway: [H100, H100P, B300]}}
  nebius:        {segment: neocloud, sources: {static_yaml: [H100]}}
  datacrunch:    {segment: neocloud, sources: {static_yaml: [H100]}}
  seeweb:        {segment: neocloud, sources: {static_yaml: [H100]}}
  ovhcloud:      {segment: neocloud, sources: {static_yaml: [H100]}}
  hetzner:       {segment: neocloud, sources: {static_yaml: [H100]}}
  genesis_cloud: {segment: neocloud, sources: {static_yaml: [H100]}}
  leaseweb:      {segment: neocloud, sources: {static_yaml: [H100]}}
```

## 8. IOSCO Principles mapping

| IOSCO principle | Implementation |
|---|---|
| Benchmark design & data sufficiency (P6–P7) | Observable, executable marketplace quotes anchored; ≥5-source rule; weights set by observed data on a fixed schedule; 25% concentration cap; no expert judgement in the calculation path |
| Hierarchy of data inputs (P8) | Executable quotes weighted 2.0x over list prices inside the weight review; overlay data never enters the calculation |
| Transparency of methodology (P9, P11) | This document is auto-generated from config, semver-versioned; every parameter is a visible config value; every weight review is stored and queryable |
| Changes to methodology (P12) | CHANGELOG + one-publication notice before any parameter change takes effect; hash-locked in CI. Scheduled weight reviews follow the fixed published formula and are data updates, not methodology changes |
| Quality of the administrator (P4–P5) | Named author; stated conflicts (the author may trade venues the index observes — disclosed); corrections never silent |
| Complaints & audit trail (P13, P16) | Raw observations and weight reviews immutable in SQLite; any reader can request the constituent set for a given day |

## 9. Versions and effective dates

A print is computed under the last version whose effective date is on or before the print
date (`config/methodology/succession.yaml`).

| Version | Effective from | Notice |
|---|---|---|
| 0.3.0-dev | 2026-07-18 | — |
| 0.4.0 | 2026-09-15 | 2026-N1 |
| 0.5.0 | 2026-09-22 | 2026-N2 |
| 0.6.0 | 2026-10-01 | 2026-N3 |
| 0.7.0 | 2026-10-08 | 2026-N4 |
| 0.8.0 | 2026-10-22 | 2026-N5 |

---

*TCI is a research publication. It is not investment advice and is not administered as a benchmark under EU Regulation 2016/1011; it may not be used as a reference price in financial instruments.*

*Author and administrator: Mark Rusch — contact via
[the contact page](contact.html). Conflicts: the author may hold positions on venues
whose prices the index observes; see GOVERNANCE.md.*
